upload a pet an private area view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GetPet</string>
+    <string name="title_activity_private_area">PrivateAreaActivity</string>
 </resources>
