--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,20 @@
     <string name="register_label_show_confirm_password">Show Confirm Password</string>
     <string name="private_area_label_confirm_password">confirm password</string>
     <string name="private_area_label_show_password">show password</string>
+    <string name="title_activity_single_post">SinglePostActivity</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_post">PostActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="hello_blank_fragment">Blank Fragment Title</string>
+    <string name="main_label_nav_upload_post">upload post</string>
+    <string name="main_label_nav_profile">profile</string>
+    <string name="main_label_my_posts">my posts</string>
+    <string name="main_label_map_fragment">map</string>
+    <string name="profile_label_title">Profile</string>
+    <string name="profile_picture_description">profite pic</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="save_changes">save changes</string>
+    <string name="profile_label_email">Email</string>
 </resources>
