--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,11 @@
     <string name="profile_label_email">Email</string>
     <string name="add_profile_image">+ profile image</string>
     <string name="map_content_description">Google Map</string>
+    <string name="kind_my_card">kind:</string>
+    <string name="my_card_age">age:</string>
+    <string name="my_card_about">about:</string>
+    <string name="my_card_location">location:</string>
+    <string name="my_card_phone">phone:</string>
+    <string name="my_card_owner">owner:</string>
+    <string name="my_card_post_image">post_image</string>
 </resources>
