my uploads flow and mvvm architecture infrastructure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="my_card_phone">phone:</string>
     <string name="my_card_owner">owner:</string>
     <string name="my_card_post_image">post_image</string>
+    <string name="edit_card_button_post">Edit</string>
 </resources>
