--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,5 +70,5 @@
     <string name="edit_card_button_post">Edit</string>
     <string name="edit_profile_btn">edit profile</string>
     <string name="edit_profile_title">Edit Profile</string>
-
+    <string name="upload_a_pet_kind_spinner">Select A Kind</string>
 </resources>
